module-5 unit-2 resilved

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <h1>JS-COURSE</h1>
-    <h2>MODULE - 4 / UNIT - 2</h2>
+    <h2>MODULE - 5 / UNIT - 2</h2>
+
+    <ul class="gallery"></ul>
+    <image></image>
     <script src="./js/script.js"></script>
   </body>
 </html>
