--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <h1>JS-COURSE</h1>
-    <h2>MODULE - 5 / UNIT - 2</h2>
+    <h2>MODULE - 6 / UNIT - 1</h2>
 
-    <ul class="gallery"></ul>
-    <image></image>
+    <ul class="users-list"></ul>
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
