--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
   </head>
   <body>
     <h1>JS-COURSE</h1>
-    <h2>MODULE - 6 / UNIT - 1</h2>
+    <h2>MODULE - 6 / UNIT - 2</h2>
+    <div>
+      <form>
+        <input class="username-input" type="text" placeholder="username" />
+        <input class="submit-btn" type="button" value="Submit" />
+      </form>
+      <ul class="users-list"></ul>
+    </div>
 
-    <ul class="users-list"></ul>
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
